# dangerDonut

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
ESC/: BLHeli_Right - F_H_70 - Rev. 16.7 - Multi_230915.ini
PCB/: DangerCookie.kicad_pcb  DangerCookie.kicad_pro  DangerCookie.kicad_sch  DangerDonut.kicad_pcb  DangerDonut.kicad_prl  DangerDonut.kicad_pro  DangerDonut.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Beacon/: Beacon.kicad_pcb  Beacon.kicad_prl  Beacon.kicad_pro  Beacon.kicad_sch  fp-info-cache  fp-lib-table
PCB/MainBoard/: DangerDonut.kicad_pcb  DangerDonut.kicad_prl  DangerDonut.kicad_pro  DangerDonut.kicad_sch  DangerDonut.xml  fp-info-cache  fp-lib-table  sym-lib-table
beacon/: beacon.ino
components/ADXL375/: ADXL375.cpp  ADXL375.h  CMakeLists.txt
components/DShotRMT/: DShotRMT.cpp
components/Freenove_WS2812_Lib_for_ESP32/: CMakeLists.txt
components/HD107S/: CMakeLists.txt  HD107S.cpp  HD107S.h
components/POVDisplay/: CMakeLists.txt  POVDisplay.cpp  POVDisplay.h  frame.cpp  frame.h  imageConverter.py  imageData.h
components/apa102/: CMakeLists.txt  Kconfig  apa102.c  apa102.h
components/bluepad32/: uni_bt.c  uni_bt_bredr.c  uni_console.c  uni_platform_arduino.c
components/bluepad32_arduino/: ArduinoController.cpp
components/bt_log/: CMakeLists.txt  bt_log.cpp  bt_log.h  gatt_server.c  gatt_server.h
components/gamepad/: CMakeLists.txt  gamepad.cpp  gamepad.h
components/orientator/: CMakeLists.txt  kalmanFilter.cpp  kalmanFilter.h  orientator.cpp  (+1 more)
main/: CMakeLists.txt  main.cpp  sketch.cpp
(+38 files in other folders)
